<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientcam">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="303dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/cam" />

            <TextView
                style="@style/TextContent.Small.White"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:background="#fff"
                android:textColor="#000"
                android:drawableStart="@drawable/ic_baseline_collections_24"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/dummy_photos" />
        </FrameLayout>

        <TextView
            style="@style/TextContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="10dp"
            android:text="@string/dummy_value"
            android:textSize="32sp" />

        <TextView
            style="@style/TextContent.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="10dp"
            android:text="@string/stock" />

        <TextView
            style="@style/TextContent"
            android:layout_width="389dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            android:text="@string/content_text" />

        <TextView
            style="@style/TextContent.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="10dp"
            android:text="@string/specification" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="194dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:layout_width="wrap_content"
                    android:layout_height="58dp"
                    android:text="@string/display" />

                <TextView
                    style="@style/TextSpec.Value"
                    android:layout_width="335dp"
                    android:layout_height="match_parent"
                    android:text="@string/content_specs_display" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:layout_width="54dp"
                    android:layout_height="52dp"
                    android:text="@string/size" />

                <TextView
                    style="@style/TextSpec.Value"
                    android:layout_width="335dp"
                    android:layout_height="52dp"
                    android:text="@string/content_specs_size" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:layout_width="62dp"
                    android:layout_height="63dp"
                    android:text="@string/battery" />

                <TextView
                    style="@style/TextSpec.Value"
                    android:layout_width="335dp"
                    android:layout_height="match_parent"
                    android:text="@string/content_specs_battery" />

            </TableRow>

        </TableLayout>

        <TextView
            style="@style/TextContent.Subtitle"
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="10dp"
            android:text="@string/seller" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="82dp"
                android:layout_height="76dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/profil" />

            <TextView
                style="@style/TextContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="26dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/profile_image"
                android:text="@string/my_name"
                android:textSize="26dp" />

        </RelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/buy"  />

    </LinearLayout>

</ScrollView>